@@ -16,6 +16,8 @@ This file lists the incompatible changes between Version 2.x and older versions
   - nfdisc, nfbasis: no longer support the old (T,flag,fa) arguments.
     Use the generic [T,listP] syntax (see 2.6.0-C105)
   - factorpadic: no longer support the deprecated (no-op) 'flag' argument
+  - optional flag to ellheight is gone (useless)
+  - ellbil(E,P,Q) is now deprecated, use ellheight(E,P,Q)
 
 * Specific to the PARI library:
 ===============================
@@ -29,6 +31,7 @@ This file lists the incompatible changes between Version 2.x and older versions
     ZX_sturmpart(x, ab)
   - removed deprecated functions nfbasis0, nfdisc0, factorpadic0
   - Flx_pow renamed to Flx_powu
+  - [libpari] rename ghell->ellheight, mathell->ellheightmatrix
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.6 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   - eval() no longer evaluates its arguments in "permissive" mode: eval("1a")
