@@ -1,6 +1,6 @@
 Function: ellheightmatrix
 Section: elliptic_curves
-C-Name: mathell
+C-Name: ellheightmatrix
 Prototype: GGp
 Help: ellheightmatrix(E,x): gives the height matrix for vector of points x
  on elliptic curve E.
