@@ -2037,7 +2037,10 @@ GEN     ellgenerators(GEN E);
 GEN     ellglobalred(GEN e1);
 GEN     ellgroup(GEN E, GEN p);
 GEN     ellgroup0(GEN E, GEN p, long flag);
-GEN     ellheight0(GEN e, GEN a, long flag,long prec);
+GEN     ellheight0(GEN e, GEN a, GEN b, long prec);
+GEN     ellheight(GEN e, GEN a, long prec);
+GEN     ellheightmatrix(GEN E, GEN x, long n);
+GEN     ellheightoo(GEN e, GEN z, long prec);
 GEN     ellheegner(GEN e);
 GEN     ellinit(GEN x, GEN p, long prec);
 GEN     ellisoncurve(GEN e, GEN z);
@@ -2050,9 +2053,9 @@ GEN     ellnonsingularmultiple(GEN e, GEN P);
 GEN     ellneg(GEN e, GEN z);
 GEN     ellorder(GEN e, GEN p, GEN o);
 GEN     ellordinate(GEN e, GEN x, long prec);
-GEN     ellpadicbil(GEN E, GEN P, GEN Q, GEN p, long n);
-GEN     ellpadicheight(GEN e, GEN P, GEN p, long v);
-GEN     ellpadicheightmatrix(GEN e, GEN x, GEN p, long n);
+GEN     ellpadicheight(GEN e, GEN p, long n, GEN P);
+GEN     ellpadicheight0(GEN e, GEN p, long n, GEN P, GEN Q);
+GEN     ellpadicheightmatrix(GEN e, GEN p, long n, GEN P);
 GEN     ellperiods(GEN w, long flag, long prec);
 GEN     ellrandom(GEN e);
 long    ellrootno(GEN e, GEN p);
