@@ -865,7 +865,7 @@ Vecsmall([1220248512, -582244995, 485580680, -1643185972, -2103930341, -9694
 ? hell(acurve,apoint)
 0.81778253183950144377417759611107234575
 ? hell2(acurve,apoint)
-0.81778253183950144377417759611107234597
+0.81778253183950144377417759611107234575
 ? hermite(amat=1/hilbert(7))
 
 [420   0    0    0   210  168   175]
@@ -2589,6 +2589,6 @@ mod(391, 3120), mod(2081, 3120)]]
 ? getstack()
 104
 ? getheap()
-[721, 108874]
+[721, 108875]
 ? print("Total time spent: ",gettime);
-Total time spent: 212
+Total time spent: 216
