@@ -865,7 +865,7 @@ Vecsmall([-696235626332558091, -7363039021536514678, -3123062006620239999, -
 ? hell(acurve,apoint)
 0.81778253183950144377417759611107234575
 ? hell2(acurve,apoint)
-0.81778253183950144377417759611107234597
+0.81778253183950144377417759611107234575
 ? hermite(amat=1/hilbert(7))
 
 [420   0    0    0   210  168   175]
@@ -2588,6 +2588,6 @@ mod(391, 3120), mod(2081, 3120)]]
 ? getstack()
 200
 ? getheap()
-[721, 98444]
+[721, 98445]
 ? print("Total time spent: ",gettime);
-Total time spent: 188
+Total time spent: 168
