@@ -445,7 +445,7 @@ t + 1/3*t^3 - 1/2*t^4 + 14/15*t^5 + O(t^6)
 [3 + 2*3^2 + 3^4 + O(3^5), 2*3^4 + 3^5 + O(3^8)]
 [3*5 + 5^2 + 2*5^3 + 3*5^4 + O(5^5), 5^2 + 4*5^4 + O(5^6)]
 [0, 0]
-  ***   at top-level: ellpadicheight(E,P,1
+  ***   at top-level: ellpadicheight(E,19,
   ***                 ^--------------------
   *** ellpadicheight: domain error in ellpadicheight: precision <= 0
 [2*3^2 + 2*3^3 + 3^4 + 3^5 + 3^6 + O(3^7), 2*3^2 + 3^4 + 2*3^5 + 3^6 + O(3^7
@@ -490,4 +490,4 @@ t + 1/3*t^3 - 1/2*t^4 + 14/15*t^5 + O(t^6)
 
 5 + 5^2 + 4*5^3 + 2*5^4 + O(5^5)
 O(5^7)
-Total time spent: 528
+Total time spent: 456
