@@ -280,25 +280,25 @@ ellformalw(e,0)
 ellformalw(e,-1)
 
 E=ellinit([1,-1,1,0,0]);P=[0,0];
-ellpadicheight(E,P, 2,4)
-ellpadicheight(E,P, 3,4)
-ellpadicheight(E,P, 5,4)
+ellpadicheight(E,2,4, P)
+ellpadicheight(E,3,4, P)
+ellpadicheight(E,5,4, P)
 E=ellinit([0,-1,1,-10,-20]);P=[5,5];
-ellpadicheight(E,P, 19,6)
-ellpadicheight(E,P, 19,0)
+ellpadicheight(E,19,6, P)
+ellpadicheight(E,19,0, P)
 
 E=ellinit([0,0,1,-4,2]);P=[-2,1];
-ellpadicheight(E,P, 3,5)
+ellpadicheight(E,3,5, P)
 E=ellinit([0,0,1,-7,6]);
 P=[-2,3]; P2=ellmul(E,P,2);
 Q=[-1,3]; Q2=ellmul(E,Q,2);
 R=[0,2];
-ellpadicbil(E,P,Q2, 2,5)
-ellpadicbil(E,P2,Q, 2,5)
-ellpadicheightmatrix(E, [P,Q,R], 5,5)
-ellpadicheight(E,P,[3,[1,2]], 5)
-ellpadicbil(E,P,Q,[3,[1,2]], 5)
-M=ellpadicheightmatrix(E, [P,Q,R], [5,[1,0]],5)
-N=ellpadicheightmatrix(E, [P,Q,R], [5,[0,1]],5)
+ellpadicheight(E,2,5, P,Q2)
+ellpadicheight(E,2,5, P2,Q)
+ellpadicheightmatrix(E,5,5, [P,Q,R])
+ellpadicheight(E,[3,[1,2]],5, P)
+ellpadicheight(E,[3,[1,2]],5, P,Q)
+M=ellpadicheightmatrix(E,[5,[1,0]],5, [P,Q,R])
+N=ellpadicheightmatrix(E,[5,[0,1]],5, [P,Q,R])
 matdet(M)
 matdet(N)
